--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../CSS/stylesheet.css">
     <meta charset="UTF-8">
     <title>TamperMonkey Test 1</title>
 </head>
 <body>
     <h1>Tamper Monkey HTML injection</h1>
-    <textarea name="" id="inject" cols="30" rows="10"></textarea>
+    <div id="wrapper">
+    <iframe id="frame" src="http://skillrack.com/faces/candidate/codetestlist.xhtml?TT=CODE" frameborder="0"></iframe>
+    </div>
 </body>
 </html>
