--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../CSS/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <meta charset="UTF-8">
     <title>TamperMonkey Test 1</title>
 </head>
