--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Tamper Monkey HTML injection</h1>
     <div id="wrapper">
-    <iframe id="frame" src="http://skillrack.com/faces/candidate/codetestlist.xhtml?TT=CODE" frameborder="0"></iframe>
+    <iframe id="frame" src="http://youtube.com" frameborder="0"></iframe>
     </div>
 </body>
 </html>
